--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <a class="text-muted" href="#">Subscribe</a>
       </div>
       <div class="col-4 text-center">
-        <a class="blog-header-logo text-dark" href="#">Extra Large</a>
+        <a class="blog-header-logo text-dark" href="#">Extra Topic Added</a>
       </div>
       <div class="col-4 d-flex justify-content-end align-items-center">
         <a class="text-muted" href="#" aria-label="Search">
