--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <span class="navbar-toggler-icon"></span>
   </button>
  
-  <div class="col-md-4 text-white text-center">News Blog</div>
+  <div class="col-md-4 text-white text-center">News BLOG</div>
 
   <form class="form-inline my-2 my-md-0">
       <input class="form-control" type="text" placeholder="Search">
@@ -68,9 +68,6 @@
       </li>
     </ul>
 
-    <form class="form-inline my-2 my-md-0">
-      <input class="form-control" type="text" placeholder="Search" aria-label="Search">
-    </form>
   </div>
 </nav>
 
