--- a/index.html
+++ b/index.html
@@ -91,6 +91,24 @@
     </nav>
   </div>
 
+  <div class="container">
+  <div class="card-deck mb-3 text-center">
+   <center><div class="card mb-4 shadow-sm">
+      <div class="card-header">
+        <h4 class="my-0 font-weight-normal">IPL(Today's Match)</h4>
+      </div>
+      <div class="card-body">
+        <h1 class="card-title pricing-card-title">MI VS <small class="text-muted">Delhi</small></h1>
+        <ul class="list-unstyled mt-3 mb-4">
+          <li>MI: 96/2 (11.3 ov)</li>
+          <li>Delhi: Current Run Rate 8.57</li>
+          <li>Batting:- Suryakumar & Ishan</li>
+          <li>Bowling:- Kagiso Rabada</li>
+        </ul>
+        <button type="button" class="btn btn-lg btn-block btn-outline-primary">Match Details</button>
+      </div>
+    </div>
+    </center>
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -127,6 +145,22 @@
             <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
           </div>
         </div>
+      </div>
+    </div>
+
+       <div class="card mb-4 shadow-sm">
+      <div class="card-header">
+        <h4 class="my-0 font-weight-normal">WEATHER</h4>
+      </div>
+      <div class="card-body">
+        <h1 class="card-title pricing-card-title">weather <small class="text-muted">/ 25</small></h1>
+        <ul class="list-unstyled mt-3 mb-4">
+          <li>65% Humidity 2 km/h</li>
+          <li>1013 Air pressure Very Weak</li>
+          <li>24 Temperature Flet 4km</li>
+          <li>Weather clear</li>
+        </ul>
+        <button type="button" class="btn btn-lg btn-block btn-primary">6-Day Weather Report</button>
       </div>
     </div>
     <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
