--- a/index.html
+++ b/index.html
@@ -123,8 +123,7 @@
     </nav>
   </div>
 
- 
-  <div class="container mt-5 mb-8">
+ "igFDSZ"
     <div class="d-flex justify-content-center row">
         
             <div class="feed p-2">
@@ -137,7 +136,7 @@
                 <div class="bg-white border mt-2"> 
                     <div>
                        <div class="d-flex flex-row justify-content-between align-items-center p-2 border-bottom">
-                            <div class="d-flex flex-row align-items-center feed-text px-2"><img class="rounded-circle" src="images/toi.png" width="45">
+                            <div class="d-flex flex-row align-items-center feed-text px-2"><img class="rounded-circle" src="images/toi01.png" width="45">
                                 <div class="d-flex flex-column flex-wrap ml-2"><span class="font-weight-bold">The Times Of India</span><span class="text-black-50 time">40 minutes ago</span></div>
                             </div>
                             
@@ -151,13 +150,14 @@
                 <div class="bg-white border mt-2">
                     <div>
                         <div class="d-flex flex-row justify-content-between align-items-center p-2 border-bottom">
-                            <div class="d-flex flex-row align-items-center feed-text px-2"><img class="rounded-circle" src="images/toi.png" width="45">
+                            <div class="d-flex flex-row align-items-center feed-text px-2"><img class="rounded-circle" src="images/toi01.png" width="45">
                                 <div class="d-flex flex-column flex-wrap ml-2"><span class="font-weight-bold">Times Of India </span><span class="text-black-50 time">40 minutes ago</span></div>
                             </div>
 <div class="feed-icon px-2"><i class="fa fa-ellipsis-v text-black-50"></i></div>
                         </div>
                     </div>
-                    <div class="feed-image p-20 px-20"><img class="img-fluid img-responsive" src="images/newsphoto01.jpg" height="850" width="800"></div>
+                    <div class="feed-image p-20 px-20"><img class="img-fluid img-responsive" src="images/toi04.jpg"
+                      7.jpg" height="850" width="800"></div>
                     <div class="d-flex justify-content-end socials p-2 py-3"><i class="fa fa-thumbs-up"></i><i class="fa fa-comments-o"></i><i class="fa fa-share"></i></div>
                     <div class="container mt-2 mb-3">
                      </div>
@@ -166,7 +166,7 @@
     </div>
 </div>
 <div class="d-flex justify-content-center row">
-<div class="col-md-9">
+<div class="col-md-7">
 <div class="feed p-2">
 <div class="d-flex flex-row justify-content-between align-items-center p-2 bg-white border">
 <div class="feed-text px-2">
@@ -189,7 +189,7 @@
                 <div class="bg-white border mt-2">
                     <div>
                         <div class="d-flex flex-row justify-content-between align-items-center p-2 border-bottom">
-                            <div class="d-flex flex-row align-items-center feed-text px-2"><img class="rounded-circle" src="images/toi.png" width="45">
+                            <div class="d-flex flex-row align-items-center feed-text px-2"><img class="rounded-circle" src="images/toi01.png" width="45">
                                 <div class="d-flex flex-column flex-wrap ml-2"><span class="font-weight-bold">The Times Of India</span><span class="text-black-50 time">40 minutes ago</span></div>
                             </div>
                             <div class="feed-icon px-2"><i class="fa fa-ellipsis-v text-black-50"></i></div>
@@ -201,13 +201,13 @@
                 <div class="bg-white border mt-2">
                     <div>
                         <div class="d-flex flex-row justify-content-between align-items-center p-2 border-bottom">
-                            <div class="d-flex flex-row align-items-center feed-text px-2"><img class="rounded-circle" src="images/toi.png" width="45">
+                            <div class="d-flex flex-row align-items-center feed-text px-2"><img class="rounded-circle" src="images/toi01.png" width="45">
                                 <div class="d-flex flex-column flex-wrap ml-2"><span class="font-weight-bold">Times Of India </span><span class="text-black-50 time">40 minutes ago</span></div>
                             </div>
 <div class="feed-icon px-2"><i class="fa fa-ellipsis-v text-black-50"></i></div>
                         </div>
                     </div>
-                    <div class="feed-image p-20 px-20"><img class="img-fluid img-responsive" src="images/newsphoto02.jpg" height="850" width="800"></div>
+                    <div class="feed-image p-20 px-20"><img class="img-fluid img-responsive" src="images/toi03.jpg" height="850" width="800"></div>
                     <div class="d-flex justify-content-end socials p-2 py-3"><i class="fa fa-thumbs-up"></i><i class="fa fa-comments-o"></i><i class="fa fa-share"></i></div>
                     <div class="container mt-2 mb-3">
                      </div>
@@ -216,7 +216,7 @@
     </div>
 </div>
 <div class="d-flex justify-content-center row">
-<div class="col-md-9">
+<div class="col-md-7">
 <div class="feed p-2">
 <div class="d-flex flex-row justify-content-between align-items-center p-2 bg-white border">
 <div class="feed-text px-2">
