--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <link href="assets/custom/navbar.css" rel="stylesheet">
 
     <link rel="stylesheet" type="text/css" href=" ">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <!-- 1st bar -->
@@ -180,7 +181,7 @@
         </div>
         <div class="d-flex justify-content-between align-items-center ml-2">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Like</button>
+                  <i class="far fa-thumbs-up"></i>
                   <button type="button" class="btn btn-sm btn-outline-secondary">Share</button>
                   <button type="button" class="btn btn-sm btn-outline-secondary">Comment</button>
                 </div>
@@ -225,7 +226,7 @@
         </div>
         <div class="d-flex justify-content-between align-items-center ml-2">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Like</button>
+                  <i class="fa fa-thumbs-up"></i>
                   <button type="button" class="btn btn-sm btn-outline-secondary">Share</button>
                   <button type="button" class="btn btn-sm btn-outline-secondary">Comment</button>
                 </div>
@@ -321,6 +322,18 @@
         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
       </li>
     </ul>
+
+    <div class="col-md-5">
+<a href="#" class="badge badge-primary">add icons</a>
+<a href="#" class="badge badge-secondary">Secondary</a>
+<a href="#" class="badge badge-success">Success</a>
+<a href="#" class="badge badge-danger">Danger</a>
+<a href="#" class="badge badge-warning">Warning</a>
+<a href="#" class="badge badge-info">Info</a>
+<a href="#" class="badge badge-light">Light</a>
+<a href="#" class="badge badge-dark">Dark</a>
+</div>
+
     <form class="form-inline mt-2 mt-md-0">
       <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
