--- a/home_8.html
+++ b/home_8.html
@@ -106,9 +106,10 @@
 								  </li>
 								  <li><a href="#">Category</a>
 								    <ul>
-								      <li><a href="#">Category 1</a></li>
-								      <li><a href="#">Category 2</a></li>
-								      <li><a href="#">Category 3</a></li>
+								      <li><a href="#">Chop dokan</a></li>
+								      <li><a href="#">Sports</a></li>
+								      <li><a href="#">Technology</a></li>
+								      <li><a href="#">Entertainment</a></li>
 								    </ul>
 								  </li>
 
@@ -164,9 +165,10 @@
 							  </li>
 							  <li><a href="#">Category</a>
 							    <ul class="dl-submenu">
-							      <li><a href="#">Category 1</a></li>
-							      <li><a href="#">Category 2</a></li>
-							      <li><a href="#">Category 3</a></li>
+							      <li><a href="#">Politics</a></li>
+							      <li><a href="#">Sports</a></li>
+							      <li><a href="#">Technology</a></li>
+							      <li><a href="#">Entertainment</a></li>
 							    </ul>
 							  </li>
 
