--- a/home_8.html
+++ b/home_8.html
@@ -164,7 +164,7 @@
 							  </li>
 							  <li><a href="#">Category</a>
 							    <ul class="dl-submenu">
-							      <li><a href="#">Category 1</a></li>
+							      <li><a href="#">Politics</a></li>
 							      <li><a href="#">Category 2</a></li>
 							      <li><a href="#">Category 3</a></li>
 							    </ul>
