--- a/home_8.html
+++ b/home_8.html
@@ -84,7 +84,7 @@
 
 						<div class="logo logo_blog_layout"><!-- Start logo -->
 							<!-- <h3>logo</h3> -->
-							<a href="index-2.html"><img src="" alt=""></a>
+							<a href="index-2.html"><img src="img/demo/newsbloglogo06.png" alt=""></a>
 						</div><!-- End logo -->
 
 						<div class="nav_bar"><!-- Start nav_bar -->
