--- a/C_Entertainment.html
+++ b/C_Entertainment.html
@@ -10,7 +10,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Technology</title>
+  <title>Entertainment</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -178,7 +178,7 @@
 			<div class="main_content container"><!-- Start main_content -->
 				<div class="mian_slider clearfix"><!--Start Mian slider -->
 
-					<h2>Technical trending-</h2>
+					<h2>Entertainment trending-</h2>
 							
 
 							<article class="hz_post"><!-- Start hz_post -->
@@ -187,15 +187,15 @@
 										<div class="icon_post_format">
 											<i class="fa fa-search-plus"></i>
 										</div>
-										<a class="image_link" href="img/Technology/120.jpg" data-lightbox="lightbox_id" data-title="Click the right half of the image to move forward.">
-										<img class="lightbox_image" src="img/Technology/120.jpg" alt=""/>
+										<a class="image_link" href="img/Enter/12.jpg" data-lightbox="lightbox_id" data-title="Click the right half of the image to move forward.">
+										<img class="lightbox_image" src="img/Enter/12.jpg" alt=""/>
 										<div class="overlay"></div></a>
 									</div>	
 
 									<div class="hz_top_post">
 										<div class="hz_title_and_meta">
 											<a href="single.html">
-												<h3 class="hz_title">PlayStation 5: How to set up and start using your new console</h3>
+												<h3 class="hz_title">BookMyShow Stream Video-On-Demand Streaming Platform Launched in India: Tenet, Other Titles Available to Rent</h3>
 											</a>
 											<div class="hz_meta_post">
 												<span class="hz_post_by"><i class="fa fa-user"></i><a href="#">Ashmawi Sami</a></span>
@@ -208,7 +208,9 @@
 
 									<div class="hz_main_post_content">
 										<div class="hz_content">
-											<p>The PlayStation 5 is finally on sale in India, and although getting one is tough, those who managed to pre-order last month have already received their units on the launch day itself. New owners of the PlayStation 5 have every reason to rejoice as Sony’s next-generation console is far superior to its predecessor. But before you start playing games, you need to follow a few steps to get familiarised with the PS5. It’s an easy setup, but we thought of guiding you on how to start using your PlayStation 5, making the process of setting up as simple as possible.</p>
+											<p>BookMyShow has now launched BookMyShow Stream — a new video-on-demand streaming platform. This marks the online ticketing platform's debut in the transactional video-on-demand (TVOD) segment as COVID-19 pandemic continues to affect the entertainment business. Through this platform, users will be able to buy or rent the movies they want, including recent blockbusters that are still in the cinemas. Films on the new platform, like Tenet and Wonder Woman 1984 are also available on Apple TV and Google Play for streaming in India, and BookMyShow Stream could be another way to access these movies without going to the theatre.
+
+BookMyShow Stream offers over 600 movie titles and 72,000+ hours of content that users can buy or rent and watch online. The platform will also feature multiple marquee premieres every Friday. This new online service looks to be BookMyShow's strategic business move to stay relevant in these changing times.</p>
 										</div>
 
 										<div class="hz_bottom_post">
@@ -243,15 +245,15 @@
 										<div class="icon_post_format">
 											<i class="fa fa-search-plus"></i>
 										</div>
-										<a class="image_link" href="img/Technology/bitcoin.jpg" data-lightbox="lightbox_id" data-title="Click the right half of the image to move forward.">
-										<img class="lightbox_image" src="img/Technology/bitcoin.jpg" alt=""/>
+										<a class="image_link" href="img/Enter/14.jpg" data-lightbox="lightbox_id" data-title="Click the right half of the image to move forward.">
+										<img class="lightbox_image" src="img/Enter/14.jpg" alt=""/>
 										<div class="overlay"></div></a>
 									</div>	
 
 									<div class="hz_top_post">
 										<div class="hz_title_and_meta">
 											<a href="single.html">
-												<h3 class="hz_title">Bitcoin Worth Over EUR 50 Million Seized From Fraudster Who Refuses to Give Up Password</h3>
+												<h3 class="hz_title">Marvel Comics will edit Immortal Hulk following anti-Semitic art criticism</h3>
 											</a>
 											<div class="hz_meta_post">
 												<span class="hz_post_by"><i class="fa fa-user"></i><a href="#">Ashmawi Sami</a></span>
@@ -264,11 +266,16 @@
 
 									<div class="hz_main_post_content">
 										<div class="hz_content">
-											<p>German prosecutors have confiscated more than EUR 50 million (roughly Rs. 440 crores) worth of Bitcoin from a fraudster. There's only one problem: they can't unlock the money because he won't give them the password.
+											<p>Marvel Comics will edit its Immortal Hulk #43 (released this week) after fans slammed the company for perpetuating anti-Semitic stereotypes in the comic's pages.
 
-The man was sentenced to jail and has since served his term, maintaining his silence throughout while police made repeated failed efforts to crack the code to access more than 1,700 Bitcoin, said a prosecutor in the Bavarian town of Kempten.
+Marvel pledged to reprint the comic and accept requests for exchanges and provide customers with the "corrected versions" or new downloads for the digital copy, according to GamesRadar. 
 
-"We asked him but he didn't say," prosecutor Sebastian Murer told Reuters on Friday. "Perhaps he doesn't know."</p>
+According to the outlet, Marvel sent an apology statement to retailers and also included it in mailers.
+"Marvel is correcting and reprinting the main and variant editions of Immortal Hulk #43, originally on sale 2/3," the statement reads. "Requests to return for exchange on Immortal Hulk #43 with these corrected versions may be made starting today."
+
+DICK VAN DYKE HELPED THE MARVEL CINEMATIC UNIVERSE IN A SURPRISING WAY
+
+The scene from the comic book in question depicts two characters negotiating at a jewelry store with the shop window reading, "Cronemberg's Jewery" but one character is standing in front of the "Y" so it actually reads "Jewer." Below the writing is the Star of David, which is a symbol of the Jewish faith.</p>
 										</div>
 
 										<div class="hz_bottom_post">
@@ -304,15 +311,15 @@ The man was sentenced to jail and has since served his term, maintaining his sil
 										<div class="icon_post_format">
 											<i class="fa fa-search-plus"></i>
 										</div>
-										<a class="image_link" href="img/Technology/elon.jpg" data-lightbox="lightbox_id" data-title="Click the right half of the image to move forward.">
-										<img class="lightbox_image" src="img/Technology/elon.jpg" alt=""/>
+										<a class="image_link" href="img/Enter/11.jpg" data-lightbox="lightbox_id" data-title="Click the right half of the image to move forward.">
+										<img class="lightbox_image" src="img/Enter/11.jpg" alt=""/>
 										<div class="overlay"></div></a>
 									</div>	
 
 									<div class="hz_top_post">
 										<div class="hz_title_and_meta">
 											<a href="single.html">
-												<h3 class="hz_title">Elon Musk Offers 1,255 Free Ventilators From China</h3>
+												<h3 class="hz_title">Weekend watch on Bob Marley’s birthday: Redemption song for reggae legend with documentary, film about revolution through music</h3>
 											</a>
 											<div class="hz_meta_post">
 												<span class="hz_post_by"><i class="fa fa-user"></i><a href="#">Ashmawi Sami</a></span>
@@ -325,13 +332,13 @@ The man was sentenced to jail and has since served his term, maintaining his sil
 
 									<div class="hz_main_post_content">
 										<div class="hz_content">
-											<p>Multi-billionaire tech mogul Elon Musk on Tuesday offered 1,255 ventilators for free to help fight COVID-19 pandemic.
+											<p>Whether you are on a beach in Goa or diving off the seven mile beach in Negril, Jamaica if there’s music playing it’s reggae. Reggae music comes from the Jamaican ‘rege-rege’ (means raggedy clothing) evolved from Ska and Rocksteady music.
 
-"China had an oversupply, so we bought 1255 FDA-approved ResMed, Philips and Medtronic ventilators… and airshipped them to LA. If you want a free ventilator installed, please let us know!" Musk tweeted, offering praise to Tesla's China team.
+It is primarily folksy telling of stories that speak of love and religion, in happy almost childlike joyous rhythms. Drums and bass guitar to make you get up and dance and the ‘shika shika’ sibilant sound of the Scraper (two sticks, one corrugated the other not, the sound produced when they’re rubbed/scraped against one another) to help you keep the swaying beat. Songs like Jammin’, Could You Be Loved, Satisfy My Soul, Sun Is Shining and the very popular One love, one heart…
 
-The need for additional ventilators has taken center stage in the ongoing fight against the spread of coronavirus and the ventilator has become a critical first line of defense for patients infected by the virus.
+But, Robert Nesta Marley was not just making you get up and dance, he was a beacon of hope to those whose lives he touched. From Trenchtown Jamaica he taught people to ‘Get up stand up! Stand up for your rights!’ Years after his suspicious death, we are still singing Buffalo Soldier. Every time I have felt like my heart was going to burst into tear soaked pieces because my life was going out of control, Bob Marley’s words, ‘No Woman, No Cry’ came to my rescue.
 
-Additionally, Musk has donated 50,000 N95 surgical masks and various protective items to a hospital in the US.</p>
+</p>
 										</div>
 
 										<div class="hz_bottom_post">
@@ -366,16 +373,15 @@ Additionally, Musk has donated 50,000 N95 surgical masks and various protective 
 										<div class="icon_post_format">
 											<i class="fa fa-search-plus"></i>
 										</div>
-										<a class="image_link" href="img/Technology/fit.jpg" data-lightbox="lightbox_id" data-title="Click the right half of the image to move forward.">
-										<img class="lightbox_image" src="img/Technology/fit.jpg" alt=""/>
+										<a class="image_link" href="img/Enter/13.jpg" data-lightbox="lightbox_id" data-title="Click the right half of the image to move forward.">
+										<img class="lightbox_image" src="img/Enter/13.jpg" alt=""/>
 										<div class="overlay"></div></a>
 									</div>	
 
 									<div class="hz_top_post">
 										<div class="hz_title_and_meta">
 											<a href="single.html">
-												<h3 class="hz_title">Google Fit app will soon track heart rate, respiratory rate using camera on Pixel phones
-</h3>
+												<h3 class="hz_title">Henry Cavill to reprise his role as Superman in Shazam 2? Here's what director David F. Sandberg has to say</h3>
 											</a>
 											<div class="hz_meta_post">
 												<span class="hz_post_by"><i class="fa fa-user"></i><a href="#">Ashmawi Sami</a></span>
@@ -388,9 +394,11 @@ Additionally, Musk has donated 50,000 N95 surgical masks and various protective 
 
 									<div class="hz_main_post_content">
 										<div class="hz_content">
-											<p>Google’s Pixel phones will soon be able to track heart rate and respiratory rate using just the camera. The feature will be made available in Google Fit app for Pixel phones, the company announced in a blog post. The feature will be expanded to more Android phones in the future, but it is not specified which devices will get this next.
+											<p>Zachary Levi's hilarious take on the DC superhero Shazam worked wonders at the box-office, as the 2019 DCEU (DC Extended Universe) film Shazam!, ended up being both a commercial success as well as critically acclaimed. Fans have been anxiously awaiting for the sequel and while we still have to wait a couple of years before we get to see Shazam! Fury of the Gods on the big screen, there was a major casting rumour making the rounds recently.
 
-In a blog post, Google’s Shwetak Patel, Director of Health Technologies at Google Health, wrote, the feature will be made available starting next month, and the company will be relying on sensors which are already built into the smartphone such as the “microphone, camera and accelerometer” to track the new health parameters.</p>
+It was being suggested by multiple reports that Henry Cavill might reprise his role as Superman in the Shazam! sequel alongside Levi's Shazam. Breaking his silence on said casting speculations is Shazam! 2's director David F. Sandberg, who also helmed the original instalment. Taking to Twitter, Sandberg neither confirmed nor denied the rumours but he did mention an interesting Superman x Shazam tidbit. "Not going to comment on casting rumors for several reasons. One being you can’t be sure about anything until it’s happened," Sandberg started.
+
+"Halfway through shooting Shazam the plan was still for Cavill to be in it. Scoopers could have scooped that and been right at the time but wrong in the end," David revealed before quipping in an adjoining tweet, "Though I can confirm with 90% certainty that Shazam will appear in Shazam 2. So if you’re a fan of that character you might enjoy Shazam 2."</p>
 										</div>
 
 										<div class="hz_bottom_post">
@@ -425,16 +433,15 @@ In a blog post, Google’s Shwetak Patel, Director of Health Technologies at Goo
 										<div class="icon_post_format">
 											<i class="fa fa-search-plus"></i>
 										</div>
-										<a class="image_link" href="img/Technology/harvard.jpg" data-lightbox="lightbox_id" data-title="Click the right half of the image to move forward.">
-										<img class="lightbox_image" src="img/Technology/harvard.jpg" alt=""/>
+										<a class="image_link" href="img/Enter/10.jpg" data-lightbox="lightbox_id" data-title="Click the right half of the image to move forward.">
+										<img class="lightbox_image" src="img/Enter/10.jpg" alt=""/>
 										<div class="overlay"></div></a>
 									</div>	
 
 									<div class="hz_top_post">
 										<div class="hz_title_and_meta">
 											<a href="single.html">
-												<h3 class="hz_title">Harvard University Launches Free Online Course In Web Programming With Python And JavaScript
-</h3>
+												<h3 class="hz_title">A Field Guide to Music’s Potential Crypto Boom</h3>
 											</a>
 											<div class="hz_meta_post">
 												<span class="hz_post_by"><i class="fa fa-user"></i><a href="#">Ashmawi Sami</a></span>
@@ -447,7 +454,11 @@ In a blog post, Google’s Shwetak Patel, Director of Health Technologies at Goo
 
 									<div class="hz_main_post_content">
 										<div class="hz_content">
-											<p>Harvard University launches free online course in Web Programming with Python and JavaScript Harvard University has been on a spree to offer free online courses throughout the last year. In its endeavour to provide excellence to the learners, Harvard University has recently rolled out a new free online course in Web Programming with Python and JavaScript. The intermediate-level course will be instructed by David J. Malan, Gordon McKay Professor of the Practice of Computer Science at Harvard University and Brian Yu, Senior Preceptor in Computer Science at Harvard University. The 12-week course is named "CS50's Web Programming with Python and JavaScript" and covers the following aspects of web development - HTML, CSS Git Python Django SQL, Models, and Migrations JavaScript User Interfaces Testing, CI/CD Scalability and Security What is in it for learners This course picks up where CS50 leaves off, diving more deeply into the design and implementation of web apps with Python, JavaScript, and SQL using frameworks like Django, React, and Bootstrap.</p>
+											<p>In a huge labyrinthine ecosystem of labels, publishers, distributors, and royalty collectors, the idea of artists getting paid quickly may sound like a revolutionary concept. What if it wasn’t?
+
+What if the music industry’s hundreds of thousands of artists — who are especially cash-strapped when they can’t tour, like right now in the Covid-19 pandemic — didn’t have to wait a cripplingly long time to get their royalties, but rather could receive streaming money instantaneously? Broaden that thought experiment: What if there was a “merch royalty,” so that the artist got a cut every time a branded hoodie or piece of art was resold, or a system to ensure accurate paychecks for musicians?
+
+All these things are possible, according to music’s cryptocurrency enthusiasts — a growing group of tech-obsessed entrepreneurs who want to apply the technology of blockchain and bitcoin to the multibillion-dollar global business of selling albums. Crypto advocates want to engineer a new financial system for music that can support real-time revenue streams and ultimately hand much more power to the individual artist. The average music fan may be easily deterred by these conversations: Cryptocurrency is, well, cryptic, and articles on the subject tend to be filled with in-the-know jargon and lengthy digressions. So Rolling Stone has scoped out the landscape and, with the help of experts like Zach Katz, Shara Senderoff, Adam Alpert, and RAC, we’ll walk you through the genesis, potential applications, and latest developments in what crypto can mean for music.</p>
 										</div>
 
 										<div class="hz_bottom_post">
