Second Home Page

--- a/home_8.html
+++ b/home_8.html
@@ -97,7 +97,7 @@
 								  </li>
 								  <li><a href="#">Category</a>
 								    <ul>
-								      <li><a href="#">Chop dokan</a></li>
+								      <li><a href="#">Politics</a></li>
 								      <li><a href="#">Sports</a></li>
 								      <li><a href="#">Technology</a></li>
 								      <li><a href="#">Entertainment</a></li>
